# fastapi_poetry_demo

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_06_29_1455-b689f5ac784a_create_model_user.py  2026_06_29_1543-09dc89b46308_change_model_user.py  2026_06_29_2318-465b4ee0a125_add_unique_email_field.py  2026_07_02_1750-d93b596cc31a_add_status_field.py
src/: async_test.py  main.py
src/account/: constants.py  dependencies.py
src/account/models/: user.py
src/account/repositories/: user.py
src/account/router/: __init__.py  role.py  user.py
src/account/schemas/: users.py
src/account/services/: user.py
src/authentication/routers/: auth.py
src/chat/: server.py
src/core/: config.py  database.py  orm.py  router.py
