[project]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Vlad",email = "fedchenkovlad1899@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.138.1,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "aiohttp (>=3.14.1,<4.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "ruff (>=0.15.20,<0.16.0)",
    "websockets (>=14.0)",
    "pre-commit (>=4.6.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=9.1.1,<10.0.0)"
]
dev = [
    "ruff (>=0.15.20,<0.16.0)"
]
#
## Exclude a variety of commonly ignored directories.
#exclude = [
#    "alembic",
#    ".bzr",
#    ".direnv",
#    ".eggs",
#    ".git",
#    ".git-rewrite",
#    ".hg",
#    ".ipynb_checkpoints",
#    ".mypy_cache",
#    ".nox",
#    ".pants.d",
#    ".pyenv",
#    ".pytest_cache",
#    ".pytype",
#    ".ruff_cache",
#    ".svn",
#    ".tox",
#    ".venv",
#    ".vscode",
#    "__pypackages__",
#    "_build",
#    "buck-out",
#    "build",
#    "dist",
#    "node_modules",
#    "site-packages",
#    "venv",
#]
#
## Same as Black.
#line-length = 88
#indent-width = 4
#
## Assume Python 3.10
#target-version = "py310"
#
#[lint]
## Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
#select = ["E4", "E7", "E9", "F"]
#ignore = []
#
## Allow fix for all enabled rules (when `--fix`) is provided.
#fixable = ["ALL"]
#unfixable = []
#
## Allow unused variables when underscore-prefixed.
#dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
#
#[format]
## Like Black, use double quotes for strings.
#quote-style = "double"
#
## Like Black, indent with spaces, rather than tabs.
#indent-style = "space"
#
## Like Black, respect magic trailing commas.
#skip-magic-trailing-comma = false
#
## Like Black, automatically detect the appropriate line ending.
#line-ending = "auto"